deployment/digital-ocean/https/templates/ingress.template.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: ocelot-social
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "letsencrypt-develop"
    certmanager.k8s.io/acme-challenge-type: http01
    nginx.ingress.kubernetes.io/proxy-body-size: 6m
spec:
  rules:
  - host: develop-k8s.ocelot.social
    http:
      paths:
        - backend:
            serviceName: develop-webapp
            servicePort: 3000
          path: /
  - host: mail.ocelot.social
    http:
      paths:
      - backend:
          serviceName: mailserver
          servicePort: 80
        path: /
  tls:
  - hosts:
      - develop-k8s.ocelot.social
    secretName: tls
